# SENA-c_sw

./: CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
Julia/: Manifest.toml  Project.toml  README.md  build.sh
Julia/src/: Csw.jl  Interpolate.jl  SwCore.jl  c_sw.jl  interpolate.jl  states.jl  sw_core.jl
Julia/test/: compare_tests.jl  interpolate_test.jl  regression_tests.jl  runtests.jl  single_regression.jl  test_c_sw.jl  unit_tests.jl
Julia/test/data/inputs/: inputs.toml
baselines/: c_sw_12x24_3.test  c_sw_48x48_0.test
dpcpp/: CMakeLists.txt  README.md
dpcpp/cmake/: c_sw_compiler_flags.cmake  compiler_flags_GNU_CXX.cmake  compiler_flags_Intel_C.cmake  compiler_flags_Intel_CXX.cmake  compiler_flags_Intel_Fortran.cmake
dpcpp/src/: CMakeLists.txt  CSWMixed.hpp  CSWOuter.cpp  CSWOuter.hpp  arrayfuncs.hpp  interpolate.f90  new_sw_core.cpp  new_sw_core.hpp  new_sw_core_interfaces.f90  sw_core.F90  sw_driver.F90
dpcpp/test/test_input/: c_sw_48x48.nl
ref/: README.md  test_csw
ref/cmake/: compiler_flags_Intel_Fortran.cmake
ref/src/: interpolate.f90  print_affinity.c  sw_core.F90  sw_driver.F90  test_exchange.F90
ref/test/: CMakeLists.txt
ref/test/src/: exchangeTest.F90
ref/test/test_input/: c_sw_12x24.nl  c_sw_12x24_0.nl  c_sw_12x24_0_1x4.nl  c_sw_12x24_3.nl  c_sw_24x24.nl  c_sw_24x24_0.nl  c_sw_24x24_0_1x4.nl  c_sw_24x24_0_2x2.nl  c_sw_24x24_3.nl  c_sw_48x24.nl  c_sw_48x24_0.nl  c_sw_48x24_0_1x4.nl  c_sw_48x24_0_2x2.nl  c_sw_48x24_3.nl  c_sw_48x48_0.nl  c_sw_48x48_0_1x4.nl  c_sw_48x48_0_2x2.nl  c_sw_48x48_3.nl
ref/test/test_output/: c_sw_12x24.test  c_sw_12x24_0.test  c_sw_24x24.test  c_sw_24x24_0.test  c_sw_24x24_3.test  c_sw_48x24.test  c_sw_48x24_0.test  c_sw_48x24_3.test  c_sw_48x48.test  c_sw_48x48_3.test
